[tool.poetry]
package-mode = false
name = "zex-deposit"
version = "0.0.1"
description = "Deposit module for Zellular Exchange"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
web3 = "~=6.19.0"
python-dotenv = "~=1.0.1"
pymongo = "~=4.10.1"
pydantic = "~=2.9.2"
pyfrost = {git = "https://github.com/zellular-xyz/pyfrost.git"}
sanic = "^24.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "~=8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
